# Dune-talk-usecase

./: Holders_amount_stDOT.csv  Holders_amount_stKSM.csv  README.md  Total_stacked_stDOT.csv  Total_stacked_stKSM.csv  main.py  pyproject.toml  retention_snapshots.csv  scripts.py
