[tool.poetry]
name = "Dune_talk"
version = "0.1.0"
description = "This is example of different usage of DUNE API"
authors = ["gregshestakov <gregshestakov@gmail.com >"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.10.0"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
